syntax = "proto3";

package storepb;

service StoreService {
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse) {};
  rpc RebrandStore(RebrandStoreRequest) returns (RebrandStoreResponse) {};
  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {};
}

message Store {
  string id = 1;
  string name = 2;
}

message Product {
  string id = 1;
  string store_id = 2;
  string name = 3;
  string description = 4;
  string sku = 5;
  double price = 6;
}

message CreateStoreRequest {
  string name = 1;
}

message CreateStoreResponse {
  string id = 1;
}

message RebrandStoreRequest {
  string id = 1;
  string name = 2;
}

message RebrandStoreResponse {}

message AddProductRequest {
  string store_id = 1;
  string name = 2;
  string description = 3;
  string sku = 4;
  double price = 5;
}
message AddProductResponse {
  string id = 1;
}
